load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library")

swift_binary(
    name = "simulate2",
    srcs = ["simulate2/main.swift"],
    deps = [
        "@SwiftNumerics//:Numerics",
        "@s4nnc//gym",
        "@swift-mujoco//:swift-mujoco",
    ],
)

swift_library(
    name = "biped-envs",
    srcs = glob(["biped/envs/*.swift"]),
    data = ["//models:biped"],
    module_name = "BipedEnvs",
    deps = [
        "@s4nnc//gym",
        "@s4nnc//nnc",
        "@swift-mujoco//:swift-mujoco",
    ],
)

swift_binary(
    name = "biped",
    srcs = ["biped/main.swift"],
    deps = [
        ":biped-envs",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//tensorboard",
    ],
)
