load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "jupyter",
    srcs = glob(["**/*.swift"]),
    module_name = "MuJoCoJupyterExtensions",
    visibility = ["//visibility:public"],
    deps = [
        "@SwiftNIO//:NIOConcurrencyHelpers",
        "@SwiftNIO//:NIOCore",
        "@SwiftNIO//:NIOHTTP1",
        "@SwiftNIO//:NIOPosix",
        "@SwiftNIO//:NIOWebSocket",
        "@ccv//lib:ccv",
        "@swift-mujoco//:swift-mujoco",
    ],
)
